# vectimus

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  docker-compose.yml  pyproject.toml
.github/: CODEOWNERS  dependabot.yml
.github/hooks/: vectimus.json
.github/workflows/: ci.yml  (+5 more)
demo/: README.md  demo-session.sh  record.sh
docs/: architecture.md  getting-started.md  owasp-agentic-mapping.md  server.md  testing.md  writing-policies.md
examples/: adk_custom_policies.py  adk_observe_mode.py  adk_per_agent_callback.py  adk_plugin.py  claude_agent_sdk.py  claude_agent_sdk_custom_tools.py  claude_agent_sdk_multi_agent.py  claude_agent_sdk_observe_mode.py  langgraph_custom_policies.py  langgraph_observe_mode.py  langgraph_react_agent.py
hooks/: post-merge
scripts/: install-hooks.sh  release.sh  sync-policies.sh
tests/: conftest.py  test_adk_integration.py  test_allow_baseline.py  test_base_pack.py  test_benchmark.py  test_cli_packs.py  test_codex_cli.py  test_config.py  test_content_inspection.py  test_daemon_resilience.py  test_detect.py  test_enforcement.py  test_enrichment.py  test_evaluator.py  test_gemini_cli.py  test_hook_cmd.py  test_identity_config.py  test_integration.py  test_jsonl_exporter.py  test_langgraph_integration.py  test_limits_config.py  test_line_based_inspection.py  test_loader.py  test_mcp_discover.py  test_models.py  test_new_critical_policies.py  test_normaliser.py  test_opencode.py  test_owasp_policies.py  test_policies.py  test_policy_sync.py  test_project_local_config.py  test_receipts.py  test_server.py  test_session_store.py  test_status.py  test_temp_disable.py  test_vectimus_dir_protection.py
(+124 files in other folders)
